--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@qualweb/core",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "description": "QualWeb evaluator core engine",
-  "main": "qualweb.js",
+  "main": "dist/index.js",
+  "types": "./node_modules/@qualweb/types",
   "scripts": {
-    "test": "qw test"
+    "tsc": "tsc",
+    "build": "tsc --build"
   },
   "keywords": [
     "qualweb",
@@ -15,46 +17,20 @@
   "author": "João Vicente",
   "license": "ISC",
   "dependencies": {
-    "ansi": "^0.3.1",
-    "colors": "^1.3.3",
+    "@qualweb/act-rules": "0.0.12",
+    "@qualweb/get-dom-puppeteer": "0.0.12",
     "dget": "^1.0.0",
     "dset": "^2.0.1",
-    "htmlparser-to-html": "0.0.6",
-    "htmlparser2": "^3.10.0",
     "lodash": "^4.17.11",
-    "module-alias": "^2.1.0",
-    "moment": "^2.22.2",
-    "request": "^2.88.0",
-    "stew-select": "0.0.5",
-    "wappalyzer": "^5.6.0"
+    "moment": "^2.24.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.123",
-    "@types/node": "^11.13.0",
-    "clean-webpack-plugin": "^2.0.1",
-    "grunt": "^1.0.4",
-    "grunt-cli": "^1.3.2",
-    "ts-loader": "^5.3.3",
-    "ts-node-dev": "^1.0.0-pre.32",
-    "typescript": "^3.4.1",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-merge": "^4.2.1",
-    "webpack-node-externals": "^1.7.2"
-  },
-  "_moduleAliases": {
-    "@core": "./qualweb.core.js",
-    "@lib": "./lib",
-    "@logs": "./logs",
-    "@modules": "./lib/modules",
-    "@databases": "./lib/databases",
-    "@managers": "./lib/managers",
-    "@apis": "./lib/apis",
-    "@errors": "./lib/error_interfaces",
-    "@data": "./lib/data",
-    "@output": "./lib/output_converters",
-    "@util": "./lib/util.js",
-    "@system": "./lib/system.js",
-    "@constants": "./lib/constants.js"
+    "@qualweb/types": "0.0.12",
+    "@types/htmlparser2": "^3.10.0",
+    "@types/lodash": "^4.14.135",
+    "@types/node": "^12.0.10",
+    "@types/request": "^2.48.1",
+    "typescript": "^3.5.2"
   }
 }
