Added option to execute specific rules

--- a/packages/act-rules/src/rules/mapping.json
+++ b/packages/act-rules/src/rules/mapping.json
@@ -1,9 +1,9 @@
 {
   "pre": {
-    "meta": ["R23"]
+    "meta": ["QW-ACT-R4"]
   },
   "post": {
-    "title": ["R11"],
-    "html": ["R12", "R13", "R28"]
+    "title": ["QW-ACT-R1"],
+    "html": ["QW-ACT-R2", "QW-ACT-R3", "QW-ACT-R5"]
   }
 }
