Added options to module act-rules. Support for aggregated reports. Code optimizations

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@qualweb/core",
-  "version": "0.0.122",
+  "version": "0.0.21",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
   "scripts": {
     "tsc": "tsc",
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "pub": "tsc --build && npm publish"
   },
   "keywords": [
     "qualweb",
@@ -21,18 +22,20 @@
   "author": "João Vicente",
   "license": "ISC",
   "dependencies": {
-    "@qualweb/act-rules": "0.0.122",
-    "@qualweb/earl-reporter": "0.0.121",
+    "@qualweb/act-rules": "0.0.21",
+    "@qualweb/earl-reporter": "0.0.2",
     "@qualweb/get-dom-puppeteer": "0.0.12",
     "@qualweb/wappalyzer": "0.0.11",
     "dget": "^1.0.0",
     "dset": "^2.0.1",
-    "lodash": "^4.17.11",
+    "fs-extra": "^8.1.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "request": "^2.88.0"
   },
   "devDependencies": {
-    "@qualweb/types": "0.0.141",
+    "@qualweb/types": "0.0.2",
+    "@types/fs-extra": "^8.0.0",
     "@types/htmlparser2": "^3.10.1",
     "@types/lodash": "^4.14.135",
     "@types/node": "^12.6.8",
