--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -1,13 +1,20 @@
 {
   "name": "@qualweb/act-rules",
-  "version": "0.0.21",
+  "version": "0.0.3",
   "description": "ACT-R module for qualweb accessibility evaluator",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
   "scripts": {
+    "test": "mocha test/**/*",
+    "test-r1": "mocha test/rules/QW-ACT-R1.spec.js",
+    "test-r2": "mocha test/rules/QW-ACT-R2.spec.js",
+    "test-r3": "mocha test/rules/QW-ACT-R3.spec.js",
+    "test-r4": "mocha test/rules/QW-ACT-R4.spec.js",
+    "test-r5": "mocha test/rules/QW-ACT-R5.spec.js",
     "tsc": "tsc",
-    "build": "tsc --build",
-    "pub": "tsc --build && npm publish"
+    "clean": "node clean.js",
+    "build": "npm run clean && tsc --build",
+    "pub": "npm run build && npm publish"
   },
   "keywords": [
     "a11y",
@@ -24,10 +31,14 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/types": "0.0.2",
+    "@qualweb/get-dom-puppeteer": "0.0.2",
+    "@qualweb/types": "0.0.32",
     "@types/htmlparser2": "^3.10.0",
     "@types/lodash": "^4.14.135",
-    "@types/node": "^12.0.12",
+    "@types/node": "^12.7.1",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.0",
+    "tslint": "^5.18.0",
     "typescript": "^3.5.2"
   },
   "dependencies": {
