--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@qualweb/core",
-  "version": "0.0.21",
+  "version": "0.0.3",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
   "scripts": {
     "tsc": "tsc",
-    "build": "tsc --build",
-    "pub": "tsc --build && npm publish"
+    "test": "mocha",
+    "clean": "node clean.js",
+    "build": "npm run clean && tsc --build",
+    "pub": "npm run build && npm publish"
   },
   "keywords": [
     "qualweb",
@@ -22,10 +24,10 @@
   "author": "João Vicente",
   "license": "ISC",
   "dependencies": {
-    "@qualweb/act-rules": "0.0.21",
-    "@qualweb/earl-reporter": "0.0.2",
-    "@qualweb/get-dom-puppeteer": "0.0.12",
-    "@qualweb/wappalyzer": "0.0.11",
+    "@qualweb/act-rules": "0.0.3",
+    "@qualweb/earl-reporter": "0.0.3",
+    "@qualweb/get-dom-puppeteer": "0.0.2",
+    "@qualweb/wappalyzer": "0.0.2",
     "dget": "^1.0.0",
     "dset": "^2.0.1",
     "fs-extra": "^8.1.0",
@@ -34,12 +36,14 @@
     "request": "^2.88.0"
   },
   "devDependencies": {
-    "@qualweb/types": "0.0.2",
+    "@qualweb/types": "0.0.32",
     "@types/fs-extra": "^8.0.0",
     "@types/htmlparser2": "^3.10.1",
     "@types/lodash": "^4.14.135",
-    "@types/node": "^12.6.8",
+    "@types/node": "^12.7.1",
     "@types/request": "^2.48.2",
+    "mocha": "^6.2.0",
+    "tslint": "^5.18.0",
     "typescript": "^3.5.2"
   }
 }
