Added modules "html-techniques", "css-techniques", "best-practices". Dependencies updated

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/core",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -25,8 +25,10 @@
   "license": "ISC",
   "dependencies": {
     "@qualweb/act-rules": "0.0.3",
-    "@qualweb/earl-reporter": "0.0.3",
-    "@qualweb/get-dom-puppeteer": "0.0.2",
+    "@qualweb/css-techniques": "0.0.2",
+    "@qualweb/earl-reporter": "0.0.4",
+    "@qualweb/get-dom-puppeteer": "0.0.4",
+    "@qualweb/html-techniques": "0.0.2",
     "@qualweb/wappalyzer": "0.0.2",
     "dget": "^1.0.0",
     "dset": "^2.0.1",
@@ -36,15 +38,16 @@
     "request": "^2.88.0"
   },
   "devDependencies": {
-    "@qualweb/types": "0.0.32",
+    "@qualweb/types": "0.0.24",
+    "@types/css": "0.0.31",
     "@types/fs-extra": "^8.0.0",
     "@types/htmlparser2": "^3.10.1",
     "@types/lodash": "^4.14.138",
     "@types/node": "^12.7.2",
-    "@types/request": "^2.48.2",
+    "@types/request": "^2.48.3",
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
-    "tslint": "^5.19.0",
-    "typescript": "^3.6.2"
+    "tslint": "^5.20.0",
+    "typescript": "^3.6.3"
   }
 }
