--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -5,11 +5,11 @@
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
   "scripts": {
-    "test": "mocha",
     "tsc": "tsc",
+    "test": "mocha test/**/*",
+    "test-bp1": "mocha test/QW-BP1.spec.js",
     "clean": "node clean.js",
     "build": "npm run clean && tsc --build",
-    "test-bp1": "mocha test/QW-BP1.spec.js",
     "pub": "npm run build && npm publish"
   },
   "repository": {
@@ -30,7 +30,9 @@
   },
   "homepage": "https://github.com/qualweb/best-practices#readme",
   "devDependencies": {
-    "@qualweb/types": "0.0.7",
+    "@qualweb/get-dom-puppeteer": "0.0.5",
+    "@qualweb/types": "0.0.25",
+    "@types/css": "0.0.31",
     "@types/htmlparser2": "^3.10.1",
     "@types/lodash": "^4.14.138",
     "@types/node": "^12.7.4",
@@ -43,7 +45,6 @@
     "htmlparser-to-html": "0.0.6",
     "htmlparser2": "^3.10.1",
     "lodash": "^4.17.15",
-    "stew-select": "0.0.5",
-    "@qualweb/get-dom-puppeteer": "latest"
+    "stew-select": "0.0.5"
   }
 }
