--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -11,6 +11,7 @@
     "test-r3": "mocha test/rules/QW-ACT-R3.spec.js",
     "test-r4": "mocha test/rules/QW-ACT-R4.spec.js",
     "test-r5": "mocha test/rules/QW-ACT-R5.spec.js",
+    "test-r9": "mocha test/rules/QW-ACT-R9.spec.js",
     "tsc": "tsc",
     "clean": "node clean.js",
     "build": "npm run clean && tsc --build",
@@ -44,6 +45,9 @@
   "dependencies": {
     "htmlparser-to-html": "0.0.6",
     "lodash": "^4.17.15",
+    "md5": "^2.2.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "stew-select": "0.0.5"
   }
 }
