--- a/packages/act-rules/src/rules/mapping.json
+++ b/packages/act-rules/src/rules/mapping.json
@@ -4,7 +4,6 @@
   },
   "post": {
     "title": ["QW-ACT-R1"],
-    "html": ["QW-ACT-R2", "QW-ACT-R3", "QW-ACT-R5"],
-    "a[href],[role=\"link\"]+a[href],[role=\"link\"]": ["QW-ACT-R9"]
+    "html": ["QW-ACT-R2", "QW-ACT-R3", "QW-ACT-R5","QW-ACT-R9"]
   }
 }
