--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/act-rules",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "description": "ACT-R module for qualweb accessibility evaluator",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -38,6 +38,8 @@
     "@types/node": "^12.7.11",
     "chai": "^4.2.0",
     "mocha": "^6.2.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "tslint": "^5.20.0",
     "typescript": "^3.6.3"
   },
