--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -5,13 +5,13 @@
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
   "scripts": {
+    "tsc": "tsc",
     "test": "mocha test/**/*",
     "test-r1": "mocha test/rules/QW-ACT-R1.spec.js",
     "test-r2": "mocha test/rules/QW-ACT-R2.spec.js",
     "test-r3": "mocha test/rules/QW-ACT-R3.spec.js",
     "test-r4": "mocha test/rules/QW-ACT-R4.spec.js",
     "test-r5": "mocha test/rules/QW-ACT-R5.spec.js",
-    "tsc": "tsc",
     "clean": "node clean.js",
     "build": "npm run clean && tsc --build",
     "pub": "npm run build && npm publish"
@@ -32,7 +32,8 @@
   "license": "ISC",
   "devDependencies": {
     "@qualweb/get-dom-puppeteer": "0.0.6",
-    "@qualweb/types": "0.0.27",
+    "@qualweb/types": "^0.1.1",
+    "@qualweb/util": "^0.1.0",
     "@types/htmlparser2": "^3.10.0",
     "@types/lodash": "^4.14.141",
     "@types/node": "^12.7.11",
@@ -41,7 +42,7 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.4"
   },
   "dependencies": {
     "htmlparser-to-html": "0.0.6",
