--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -32,8 +32,9 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/get-dom-puppeteer": "0.0.2",
-    "@qualweb/types": "0.0.32",
+    "@qualweb/get-dom-puppeteer": "0.0.7",
+    "@qualweb/types": "0.1.1",
+    "@qualweb/util": "^0.1.1",
     "@types/htmlparser2": "^3.10.0",
     "@types/lodash": "^4.14.138",
     "@types/node": "^12.7.2",
