fixed some bugs

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/core",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -32,9 +32,7 @@
     "@qualweb/get-dom-puppeteer": "^0.1.1",
     "@qualweb/html-techniques": "0.0.6",
     "@qualweb/wappalyzer": "0.0.2",
-    "fs-extra": "^8.1.0",
-    "lodash": "^4.17.15",
-    "request": "^2.88.0"
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@qualweb/types": "^0.1.5",
@@ -45,7 +43,10 @@
     "@types/node": "^12.7.12",
     "@types/request": "^2.48.3",
     "chai": "^4.2.0",
+    "fs-extra": "^8.1.0",
     "mocha": "^6.2.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "tslint": "^5.20.0",
     "typescript": "^3.6.4"
   }
