--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -13,6 +13,7 @@
     "test-r4": "mocha test/rules/QW-ACT-R4.spec.js",
     "test-r5": "mocha test/rules/QW-ACT-R5.spec.js",
     "test-r7": "mocha test/rules/QW-ACT-R7.spec.js",
+    "test-r11": "mocha test/rules/QW-ACT-R11.spec.js",
     "clean": "node clean.js",
     "build": "npm run clean && tsc --build",
     "pub": "npm run build && npm publish"
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@qualweb/get-dom-puppeteer": "^0.1.1",
     "@qualweb/types": "^0.1.2",
+    "@qualweb/util": "^0.1.1",
     "@types/htmlparser2": "^3.10.0",
     "@types/lodash": "^4.14.141",
     "@types/node": "^12.7.11",
