--- a/packages/act-rules/src/rules/mapping.json
+++ b/packages/act-rules/src/rules/mapping.json
@@ -4,6 +4,7 @@
   },
   "post": {
     "title": ["QW-ACT-R1"],
-    "html": ["QW-ACT-R2", "QW-ACT-R3", "QW-ACT-R5"]
+    "html": ["QW-ACT-R2", "QW-ACT-R3", "QW-ACT-R5"],
+    "button, input[type=\"submit\"], input[type=\"reset\"], input[type=\"button\"], summary, [role=\"button\"]": ["QW-ACT-R11"]
   }
 }
