--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -34,7 +34,7 @@
   "license": "ISC",
   "devDependencies": {
     "@qualweb/get-dom-puppeteer": "^0.1.1",
-    "@qualweb/types": "^0.1.2",
+    "@qualweb/types": "0.1.1",
     "@qualweb/util": "^0.1.2",
     "@types/htmlparser2": "^3.10.0",
     "@types/lodash": "^4.14.141",
