--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -13,6 +13,7 @@
     "test-r4": "mocha test/rules/QW-ACT-R4.spec.js",
     "test-r5": "mocha test/rules/QW-ACT-R5.spec.js",
     "test-r7": "mocha test/rules/QW-ACT-R7.spec.js",
+    "test-r14": "mocha test/rules/QW-ACT-R14.spec.js",
     "clean": "node clean.js",
     "build": "npm run clean && tsc --build",
     "pub": "npm run build && npm publish"
