--- a/packages/act-rules/src/rules/mapping.json
+++ b/packages/act-rules/src/rules/mapping.json
@@ -4,6 +4,7 @@
   },
   "post": {
     "title": ["QW-ACT-R1"],
-    "html": ["QW-ACT-R2", "QW-ACT-R3", "QW-ACT-R5"]
+    "html": ["QW-ACT-R2", "QW-ACT-R3", "QW-ACT-R5"],
+    "meta[name=\"viewport\"]": ["QW-ACT-R14"]
   }
 }
