--- a/packages/act-rules/src/rules/mapping.json
+++ b/packages/act-rules/src/rules/mapping.json
@@ -5,6 +5,6 @@
   "post": {
     "title": ["QW-ACT-R1"],
     "html": ["QW-ACT-R2", "QW-ACT-R3", "QW-ACT-R5"],
-    "meta[name=\"viewport\"]": ["QW-ACT-R14"]
+    "meta[name]": ["QW-ACT-R14"]
   }
 }
