--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -8,6 +8,7 @@
     "tsc": "tsc",
     "test": "mocha test/**/*",
     "test-bp1": "mocha test/QW-BP1.spec.js",
+    "test-bp2": "mocha test/best-practices/QW-BP2.spec.js",
     "clean": "node clean.js",
     "build": "npm run clean && tsc --build",
     "pub": "npm run build && npm publish --access=public"
