--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "tsc": "tsc",
     "test": "mocha test/**/*",
-    "test-bp1": "mocha test/QW-BP1.spec.js",
+    "test-bp1": "mocha test/best-practices/QW-BP1.spec.js",
+    "test-bp5": "mocha test/best-practices/QW-BP5.spec.js",
     "clean": "node clean.js",
     "build": "npm run clean && tsc --build",
     "pub": "npm run build && npm publish --access=public"
@@ -32,14 +33,15 @@
   "devDependencies": {
     "@qualweb/get-dom-puppeteer": "^0.1.1",
     "@qualweb/types": "^0.1.5",
+    "@qualweb/util": "^0.1.5",
     "@types/css": "0.0.31",
     "@types/htmlparser2": "^3.10.1",
-    "@types/lodash": "^4.14.138",
-    "@types/node": "^12.7.4",
+    "@types/lodash": "^4.14.144",
+    "@types/node": "^12.11.5",
     "chai": "^4.2.0",
-    "mocha": "^6.2.0",
+    "mocha": "^6.2.2",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.2"
+    "typescript": "^3.6.4"
   },
   "dependencies": {
     "htmlparser-to-html": "0.0.6",
