--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "tsc": "tsc",
     "test": "mocha test/**/*",
-    "test-bp1": "mocha test/QW-BP1.spec.js",
+    "test-bp1": "mocha test/best-practices/QW-BP1.spec.js",
+    "test-bp4": "mocha test/best-practices/QW-BP4.spec.js",
     "clean": "node clean.js",
     "build": "npm run clean && tsc --build",
     "pub": "npm run build && npm publish --access=public"
@@ -32,10 +33,11 @@
   "devDependencies": {
     "@qualweb/get-dom-puppeteer": "^0.1.1",
     "@qualweb/types": "^0.1.5",
+    "@qualweb/util": "^0.1.5",
     "@types/css": "0.0.31",
     "@types/htmlparser2": "^3.10.1",
     "@types/lodash": "^4.14.138",
-    "@types/node": "^12.7.4",
+    "@types/node": "^12.11.6",
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
     "tslint": "^5.20.0",
