--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/core",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -24,11 +24,11 @@
   "author": "João Vicente",
   "license": "ISC",
   "dependencies": {
-    "@qualweb/act-rules": "^0.1.2",
+    "@qualweb/act-rules": "^0.1.4",
     "@qualweb/best-practices": "0.0.1",
     "@qualweb/crawler": "0.0.1",
     "@qualweb/css-techniques": "0.0.2",
-    "@qualweb/earl-reporter": "0.0.6",
+    "@qualweb/earl-reporter": "^0.1.0",
     "@qualweb/get-dom-puppeteer": "^0.1.1",
     "@qualweb/html-techniques": "0.0.6",
     "@qualweb/wappalyzer": "0.0.2",
@@ -36,9 +36,9 @@
     "lodash": "^4.17.15"
   },
   "devDependencies": {
-    "@qualweb/types": "^0.1.5",
+    "@qualweb/types": "^0.1.8",
     "@types/css": "0.0.31",
-    "@types/fs-extra": "^8.0.0",
+    "@types/fs-extra": "^8.0.1",
     "@types/htmlparser2": "^3.10.1",
     "@types/lodash": "^4.14.144",
     "@types/node": "^12.7.12",
