--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/act-rules",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "ACT-R module for qualweb accessibility evaluator",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -41,9 +41,9 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/util": "0.1.6",
     "@qualweb/get-dom-puppeteer": "^0.1.1",
     "@qualweb/types": "^0.1.9",
+    "@qualweb/util": "^0.1.6",
     "@types/htmlparser2": "^3.10.0",
     "@types/lodash": "^4.14.141",
     "@types/node": "^12.7.11",
