--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -22,6 +22,7 @@
     "test-r13": "mocha test/rules/QW-ACT-R13.spec.js",
     "test-r14": "mocha test/rules/QW-ACT-R14.spec.js",
     "test-r18": "mocha test/rules/QW-ACT-R18.spec.js",
+    "test-r22": "mocha test/rules/QW-ACT-R22.spec.js",
     "clean": "node clean.js",
     "build": "npm run clean && tsc --build",
     "pub": "npm run build && npm publish"
