--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/core",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -24,30 +24,30 @@
   "author": "João Vicente",
   "license": "ISC",
   "dependencies": {
-    "@qualweb/act-rules": "^0.1.7",
-    "@qualweb/best-practices": "0.0.1",
+    "@qualweb/act-rules": "^0.1.10",
+    "@qualweb/best-practices": "^0.1.1",
     "@qualweb/crawler": "0.0.1",
     "@qualweb/css-techniques": "0.0.2",
     "@qualweb/earl-reporter": "^0.1.0",
     "@qualweb/get-dom-puppeteer": "^0.1.2",
-    "@qualweb/html-techniques": "0.0.6",
+    "@qualweb/html-techniques": "^0.1.0",
     "@qualweb/wappalyzer": "0.0.2",
     "fs-extra": "^8.1.0",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
-    "@qualweb/types": "^0.1.8",
+    "@qualweb/types": "^0.1.9",
     "@types/css": "0.0.31",
     "@types/fs-extra": "^8.0.1",
     "@types/htmlparser2": "^3.10.1",
-    "@types/lodash": "^4.14.144",
-    "@types/node": "^12.7.12",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "^12.12.11",
     "@types/request": "^2.48.3",
     "chai": "^4.2.0",
-    "mocha": "^6.2.1",
+    "mocha": "^6.2.2",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.4"
+    "request-promise": "^4.2.5",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.2"
   }
 }
