--- a/packages/best-practices/src/best-practices/mapping.json
+++ b/packages/best-practices/src/best-practices/mapping.json
@@ -4,8 +4,8 @@
   "table": ["QW-BP5","QW-BP9","QW-BP12"],
   "title": ["QW-BP6","QW-BP7"],
   "h1, h2, h3, h4, h5, h6": ["QW-BP1", "QW-BP8"],
-  "b, blink, blockquote, basefont, center, cite, em, font, i, link, mark, strong, s, strike, u, vlink": ["QW-BP10"],
-  "*": ["QW-BP11"],
+  "b, blink, blockquote, basefont, center, cite, em, font, i,body link, mark, strong, s, strike, u, vlink": ["QW-BP10"],
+  "body, body *": ["QW-BP11"],
   "a > img": ["QW-BP13"],
   "a:first-child": ["QW-BP4"]
 }
