--- a/packages/core/src/lib/managers/modules/act-rules/rules/mapping.json
+++ b/packages/core/src/lib/managers/modules/act-rules/rules/mapping.json
@@ -1,4 +1,7 @@
 {
+  "pre": {
+    "meta": ["QW-ACT-R4"]
+  },
   "post": {
     "title": ["QW-ACT-R1"],
     "html": ["QW-ACT-R2", "QW-ACT-R3", "QW-ACT-R5"],
