--- a/packages/act-rules/src/rules/mapping.json
+++ b/packages/act-rules/src/rules/mapping.json
@@ -4,10 +4,9 @@
   },
   "post": {
     "title": ["QW-ACT-R1"],
-    "input[type=\"image\"]": ["QW-ACT-R6"],
+    "html": ["QW-ACT-R2", "QW-ACT-R3", "QW-ACT-R5"],
     "img[src], input[type=\"image\"][src]": ["QW-ACT-R8"],
-    "html": ["QW-ACT-R2", "QW-ACT-R3", "QW-ACT-R5", "QW-ACT-R9"],
-    "body": ["QW-ACT-R10"],
+    "input[type=\"image\"]": ["QW-ACT-R6"],
     "button, input[type=\"submit\"], input[type=\"reset\"], input[type=\"button\"], summary, [role=\"button\"]": ["QW-ACT-R11"],
     "a[href], area[href], [role=\"link\"]": ["QW-ACT-R12"],
     "[aria-hidden=\"true\"]": ["QW-ACT-R13"],
