--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/best-practices",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "QualWeb best practices",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -42,22 +42,17 @@
   },
   "homepage": "https://github.com/qualweb/best-practices#readme",
   "devDependencies": {
-    "@qualweb/get-dom-puppeteer": "^0.1.1",
-    "@qualweb/types": "^0.1.5",
-    "@types/css": "0.0.31",
-    "@types/htmlparser2": "^3.10.1",
+    "@qualweb/types": "^0.2.5",
     "@types/lodash": "^4.14.144",
-    "@types/node": "^12.11.6",
+    "@types/node": "^12.12.14",
+    "@types/puppeteer": "^2.0.0",
     "chai": "^4.2.0",
     "mocha": "^6.2.2",
     "tslint": "^5.20.0",
     "typescript": "^3.6.4"
   },
   "dependencies": {
-    "@qualweb/util": "^0.1.11",
-    "htmlparser-to-html": "0.0.6",
-    "htmlparser2": "^3.10.1",
-    "lodash": "^4.17.15",
-    "stew-select": "0.0.5"
+    "@qualweb/util": "^0.2.0",
+    "lodash": "^4.17.15"
   }
 }
