--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -45,6 +45,7 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
+    "puppeteer": "^2.0.0",
     "@qualweb/types": "^0.2.5",
     "@types/htmlparser2": "^3.10.0",
     "@types/lodash": "^4.14.141",
@@ -54,7 +55,8 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.4"
+    "typescript": "^3.6.4",
+    "css": "^2.2.4"
   },
   "dependencies": {
     "@qualweb/util": "^0.2.0",
