--- a/packages/act-rules/src/rules/mapping.json
+++ b/packages/act-rules/src/rules/mapping.json
@@ -14,6 +14,7 @@
     "[id]": ["QW-ACT-R18"],
     "svg": ["QW-ACT-R21"],
     "body [lang]": ["QW-ACT-R22"],
+    "body": ["QW-ACT-R9"],
     "input, select, textarea, [role]": ["QW-ACT-R16"],
     "[role]": ["QW-ACT-R20"]
   }
