--- a/packages/act-rules/src/rules/mapping.json
+++ b/packages/act-rules/src/rules/mapping.json
@@ -15,6 +15,8 @@
     "svg": ["QW-ACT-R21"],
     "body [lang]": ["QW-ACT-R22"],
     "input, select, textarea, [role]": ["QW-ACT-R16"],
-    "[role]": ["QW-ACT-R20"]
+    "[role]": ["QW-ACT-R20"],
+    "img, [role=\"img\"]":  ["QW-ACT-R17"],
+    "iframe": ["QW-ACT-R19"]
   }
 }
