--- a/packages/act-rules/src/rules/mapping.json
+++ b/packages/act-rules/src/rules/mapping.json
@@ -11,6 +11,7 @@
     "a[href], area[href], [role=\"link\"]": ["QW-ACT-R12"],
     "[aria-hidden=\"true\"]": ["QW-ACT-R13"],
     "meta[name]": ["QW-ACT-R14"],
+    "audio,video": ["QW-ACT-R15"],
     "[id]": ["QW-ACT-R18"],
     "svg": ["QW-ACT-R21"],
     "body [lang]": ["QW-ACT-R22"],
