--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -57,10 +57,11 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "tslint": "^5.20.0",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.3",
+    "css": "^2.2.4"
   },
   "dependencies": {
-    "@qualweb/util": "^0.2.3",
+    "@qualweb/util": "^0.2.5",
     "follow-redirects": "^1.9.0",
     "html-validator": "^5.0.0",
     "htmlparser-to-html": "0.0.6",
