--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/best-practices",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "QualWeb best practices",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -44,21 +44,21 @@
   },
   "homepage": "https://github.com/qualweb/best-practices#readme",
   "devDependencies": {
-    "@qualweb/types": "^0.2.5",
+    "@qualweb/types": "^0.2.6",
     "@types/lodash": "^4.14.144",
-    "@types/node": "^12.12.14",
+    "@types/node": "^12.12.16",
     "@types/puppeteer": "^2.0.0",
     "chai": "^4.2.0",
+    "css": "^2.2.4",
     "mocha": "^6.2.2",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.4",
     "puppeteer": "^2.0.0",
     "request": "^2.88.0",
     "stew-select": "0.0.5",
-    "css": "^2.2.4"
+    "tslint": "^5.20.0",
+    "typescript": "^3.7.3"
   },
   "dependencies": {
-    "@qualweb/util": "^0.2.0",
+    "@qualweb/util": "^0.2.7",
     "lodash": "^4.17.15"
   }
 }
