--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
   "scripts": {
-    "test": "mocha test/**/*",
+    "test": "mocha --recursive",
     "tsc": "tsc",
     "test-r1": "mocha test/rules/QW-ACT-R1.spec.js",
     "test-r2": "mocha test/rules/QW-ACT-R2.spec.js",
@@ -47,24 +47,24 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/types": "^0.2.6",
-    "puppeteer": "^2.0.0",
+    "@qualweb/types": "^0.2.10",
     "@types/htmlparser2": "^3.10.0",
-    "@types/lodash": "^4.14.141",
-    "@types/node": "^12.7.11",
+    "@types/node": "^12.12.21",
     "chai": "^4.2.0",
+    "css": "^2.2.4",
     "mocha": "^6.2.1",
+    "puppeteer": "^2.0.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4",
     "tslint": "^5.20.0",
     "typescript": "^3.7.3"
   },
   "dependencies": {
-    "@qualweb/util": "^0.2.3",
+    "@qualweb/util": "^0.2.10",
+    "@types/lodash.clone": "^4.5.6",
     "follow-redirects": "^1.9.0",
     "html-validator": "^5.0.0",
     "htmlparser-to-html": "0.0.6",
-    "lodash": "^4.17.15",
+    "lodash.clone": "^4.5.0",
     "rematrix": "^0.4.1",
     "stew-select": "0.0.5"
   }
