--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/act-rules",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "ACT-R module for qualweb accessibility evaluator",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@qualweb/types": "^0.2.10",
     "@types/htmlparser2": "^3.10.0",
+    "@types/lodash.clonedeep": "^4.5.6",
     "@types/node": "^12.12.24",
     "chai": "^4.2.0",
     "css": "^2.2.4",
@@ -65,6 +66,7 @@
     "html-validator": "^5.0.0",
     "htmlparser-to-html": "0.0.6",
     "lodash.clone": "^4.5.0",
+    "lodash.clonedeep": "^4.5.0",
     "rematrix": "^0.4.1",
     "stew-select": "0.0.5"
   }
