code kind of done

--- a/packages/act-rules/src/rules/mapping.json
+++ b/packages/act-rules/src/rules/mapping.json
@@ -18,6 +18,7 @@
     "input, select, textarea, [role]": ["QW-ACT-R16"],
     "[role]": ["QW-ACT-R20"],
     "img, [role=\"img\"]":  ["QW-ACT-R17"],
-    "iframe": ["QW-ACT-R19"]
+    "iframe": ["QW-ACT-R19"],
+    "video": ["QW-ACT-R23"]
   }
 }
