--- a/packages/act-rules/src/rules/mapping.json
+++ b/packages/act-rules/src/rules/mapping.json
@@ -16,8 +16,10 @@
     "body [lang]": ["QW-ACT-R22"],
     "body": ["QW-ACT-R9","QW-ACT-R10"],
     "input, select, textarea, [role]": ["QW-ACT-R16"],
+    "input, select, textarea, [autocomplete]": ["QW-ACT-R24"],
     "[role]": ["QW-ACT-R20"],
     "img, [role=\"img\"]":  ["QW-ACT-R17"],
-    "iframe": ["QW-ACT-R19"]
+    "iframe": ["QW-ACT-R19"],
+    "[aria-label], [aria-labelledby]": ["QW-ACT-R30"]
   }
 }
