--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -28,6 +28,7 @@
     "test-r20": "mocha test/rules/QW-ACT-R20.spec.js",
     "test-r21": "mocha test/rules/QW-ACT-R21.spec.js",
     "test-r22": "mocha test/rules/QW-ACT-R22.spec.js",
+    "test-r28": "mocha test/rules/QW-ACT-R28.spec.js",
     "clean": "node clean.js",
     "build": "npm run clean && tsc --build",
     "pub": "npm run build && npm publish"
@@ -61,7 +62,7 @@
     "css": "^2.2.4"
   },
   "dependencies": {
-    "@qualweb/util": "^0.2.5",
+    "@qualweb/util": "^0.2.20",
     "follow-redirects": "^1.9.0",
     "html-validator": "^5.0.0",
     "htmlparser-to-html": "0.0.6",
