--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -35,6 +35,7 @@
     "test-r26": "mocha test/rules/QW-ACT-R26.spec.js",
     "test-r27": "mocha test/rules/QW-ACT-R27.spec.js",
     "test-r28": "mocha test/rules/QW-ACT-R28.spec.js",
+    "test-r29": "mocha test/rules/QW-ACT-R29.spec.js",
     "test-r30": "mocha test/rules/QW-ACT-R30.spec.js",
     "test-r31": "mocha test/rules/QW-ACT-R31.spec.js",
     "test-r33": "mocha test/rules/QW-ACT-R33.spec.js",
