--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/best-practices",
-  "version": "0.2.4",
+  "version": "0.3.0",
   "description": "QualWeb best practices",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -44,9 +44,10 @@
   },
   "homepage": "https://github.com/qualweb/best-practices#readme",
   "devDependencies": {
-    "@qualweb/types": "^0.2.7",
-    "@types/lodash": "^4.14.144",
-    "@types/node": "^12.12.17",
+    "@qualweb/types": "^0.2.16",
+    "@types/lodash.clone": "^4.5.6",
+    "@types/lodash.clonedeep": "^4.5.6",
+    "@types/node": "^12.12.24",
     "@types/puppeteer": "^2.0.0",
     "chai": "^4.2.0",
     "css": "^2.2.4",
@@ -55,10 +56,11 @@
     "request": "^2.88.0",
     "stew-select": "0.0.5",
     "tslint": "^5.20.0",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.4"
   },
   "dependencies": {
-    "@qualweb/util": "^0.2.10",
-    "lodash": "^4.17.15"
+    "@qualweb/util": "^0.2.25",
+    "lodash.clone": "^4.5.0",
+    "lodash.clonedeep": "^4.5.0"
   }
 }
