all tested, all done

--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -41,7 +41,7 @@
     "test-r32": "mocha test/rules/QW-ACT-R32.spec.js",
     "test-r33": "mocha test/rules/QW-ACT-R33.spec.js",
     "test-r34": "mocha test/rules/QW-ACT-R34.spec.js",
-    "test-r36": "mocha test/rules/QW-ACT-R36.spec.js",
+    "test-r36": "npm run build && mocha test/rules/QW-ACT-R36.spec.js",
     "clean": "node clean.js",
     "build": "npm run clean && tsc --build",
     "pub": "npm run build && npm publish"
@@ -75,7 +75,7 @@
     "typescript": "^3.7.5"
   },
   "dependencies": {
-    "@qualweb/util": "^0.2.25",
+    "@qualweb/util": "^0.2.29",
     "follow-redirects": "^1.9.0",
     "html-validator": "^5.0.0",
     "htmlparser-to-html": "0.0.6",
