--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -42,6 +42,7 @@
     "test-r33": "mocha test/rules/QW-ACT-R33.spec.js",
     "test-r34": "mocha test/rules/QW-ACT-R34.spec.js",
     "test-r35": "mocha test/rules/QW-ACT-R35.spec.js",
+    "test-r37": "mocha test/rules/QW-ACT-R37.spec.js",
     "clean": "node clean.js",
     "build": "npm run clean && tsc --build",
     "pub": "npm run build && npm publish"
@@ -75,6 +76,7 @@
   },
   "dependencies": {
     "@qualweb/util": "^0.2.42",
+    "languagedetect": "^2.0.0",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
     "rematrix": "^0.4.1",
