--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -78,6 +78,7 @@
     "languagedetect": "^2.0.0",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
-    "rematrix": "^0.4.1"
+    "rematrix": "^0.4.1",
+    "string-pixel-width": "^1.10.0"
   }
 }
