--- a/packages/best-practices/src/best-practices/mapping.json
+++ b/packages/best-practices/src/best-practices/mapping.json
@@ -3,7 +3,7 @@
   "a[title]": ["QW-BP3"],
   "table": ["QW-BP9", "QW-BP12"],
   "table table": ["QW-BP5"],
-  "title": ["QW-BP6", "QW-BP7"],
+  ":not(svg) > title": ["QW-BP6", "QW-BP7"],
   "h1, h2, h3, h4, h5, h6": ["QW-BP1", "QW-BP8"],
   "b, blink, blockquote, basefont, center, cite, em, font, i,body link, mark, strong, s, strike, u, vlink": ["QW-BP10"],
   "body, body *": ["QW-BP11"],
